hphp/hack/test/enum_atom/typing/atom2.php.exp
File "atom2.php", line 25, characters 13-16:
An atom is required here, not a class constant projection. (Typing[4397])
File "atom2.php", line 26, characters 8-9:
Atoms are not allowed in this position. They are only allowed in function call, if the function parameter is annotated with __Atom (Typing[4396])
